--- a/13-变异方法和替换数组.html
+++ b/13-变异方法和替换数组.html
@@ -1,10 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
 </head>
+
 <body>
   <div id="app">
     <div>
@@ -30,20 +31,21 @@
       el: '#app',
       data: {
         fname: '',
-        list: ['apple','orange','banana']
+        list: ['apple', 'orange', 'banana']
       },
       methods: {
-        add: function(){
+        add: function () {
           this.list.push(this.fname);
         },
-        del: function(){
+        del: function () {
           this.list.pop();
         },
-        change: function(){
-          this.list = this.list.slice(0,2);
+        change: function () {
+          this.list = this.list.slice(0, 2);
         }
       }
     });
   </script>
 </body>
+
 </html>
