--- a/生命周期.html
+++ b/生命周期.html
@@ -8,10 +8,13 @@
 </head>
 
 <body>
-<div id="a">
-    <div>{{m}}</div>
-</div>
-<script src="js/vue.js"></script>
+    <div id="a">
+        <div>{{m}}</div>
+    </div>
+    <script src="js/vue.js"></script>
+    <script>
+        const
+    </script>
 </body>
 
 </html>
