--- a/生命周期.html
+++ b/生命周期.html
@@ -3,17 +3,59 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 
 <body>
     <div id="a">
         <div>{{m}}</div>
+        <button @click='update'>更新</button>
+        <button @click='destroy'>销毁</button>
     </div>
-    <script src="js/vue.js"></script>
-    <script>
-        const
+    <script type="text/javascript" src="js/vue.js"></script>
+    <script type="text/javascript">
+        /*
+      Vue实例的生命周期
+      
+    */
+        var vm = new Vue({
+            el: '#a',
+            data: {
+                m: '生命周期'
+            },
+            methods: {
+                update: function () {
+                    this.m = 'Hello';
+                },
+                destroy: function () {
+                    this.$destroy();
+                }
+            },
+            beforeCreate: function () {
+                console.log('beforeCreate');
+            },
+            created: function () {
+                console.log('created');
+            },
+            beforeMount: function () {
+                console.log('beforeMount');
+            },
+            mounted: function () {
+                console.log('mounted');
+            },
+            beforeUpdate: function () {
+                console.log('beforeUpdate');
+            },
+            updated: function () {
+                console.log('updated');
+            },
+            beforeDestroy: function () {
+                console.log('beforeDestroy');
+            },
+            destroyed: function () {
+                console.log('destroyed');
+            }
+        });
     </script>
 </body>
 
