--- a/变异方法和替换数组.html
+++ b/变异方法和替换数组.html
@@ -8,7 +8,40 @@
 </head>
 
 <body>
-
+    <div id="a">
+        <div>
+            <span>
+                <input type="text" v-model='name'>
+                <button @click='add'>添加</button>
+                <button @click='del'>删除</button>
+                <button @click='change'>替换</button>
+            </span>
+        </div>
+        <ul>
+            <li :key='index' v-for='(item,index) in list'>{{item}}</li>
+        </ul>
+    </div>
+    <script src="js/vue.js"></script>
+    <script>
+        const vm = new Vue({
+            el: '#a',
+            data: {
+                name: "",
+                list: ['AA', 'BB', 'CC', 'DD']
+            },
+            methods: {
+                add: function () {
+                    this.list.push(this.name)
+                },
+                del: function () {
+                    this.list.pop()
+                },
+                change: function () {
+                    this.list = this.list.slice(0, 3)
+                }
+            },
+        })
+    </script>
 </body>
 
 </html>
