--- a/14-动态响应式数据处理.html
+++ b/14-动态响应式数据处理.html
@@ -35,9 +35,11 @@
     });
     // vm.list[1] = 'lemon';
     // Vue.set(vm.list, 2, 'lemon');
+    // 数据/视图都会改变
     vm.$set(vm.list, 1, 'lemon');
 
     // vm.info.gender = 'male';
+    // 数据/视图都会改变
     vm.$set(vm.info, 'gender', 'female');
   </script>
 </body>
