--- a/17-图书管理案例-修改图书.html
+++ b/17-图书管理案例-修改图书.html
@@ -1,6 +1,6 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
@@ -10,20 +10,25 @@
       width: 530px;
       text-align: center;
     }
+
     .grid table {
       border-top: 1px solid #C2D89A;
       width: 100%;
       border-collapse: collapse;
     }
-    .grid th,td {
+
+    .grid th,
+    td {
       padding: 10;
       border: 1px dashed #F3DCAB;
       height: 35px;
       line-height: 35px;
     }
+
     .grid th {
       background-color: #F3DCAB;
     }
+
     .grid .book {
       padding-bottom: 10px;
       padding-top: 5px;
@@ -31,6 +36,7 @@
     }
   </style>
 </head>
+
 <body>
   <div id="app">
     <div class="grid">
@@ -89,34 +95,34 @@
           id: 1,
           name: '三国演义',
           date: ''
-        },{
+        }, {
           id: 2,
           name: '水浒传',
           date: ''
-        },{
+        }, {
           id: 3,
           name: '红楼梦',
           date: ''
-        },{
+        }, {
           id: 4,
           name: '西游记',
           date: ''
         }]
       },
       methods: {
-        handle: function(){
-          if(this.flag) {
+        handle: function () {
+          if (this.flag) {
             // 编辑图书
             // 就是根据当前的ID去更新数组中对应的数据
             this.books.some((item) => {
-              if(item.id == this.id) {
+              if (item.id == this.id) {
                 item.name = this.name;
                 // 完成更新操作之后，需要终止循环
                 return true;
               }
             });
             this.flag = false;
-          }else{
+          } else {
             // 添加图书
             var book = {};
             book.id = this.id;
@@ -131,12 +137,12 @@
           this.id = '';
           this.name = '';
         },
-        toEdit: function(id){
+        toEdit: function (id) {
           // 禁止修改ID
           this.flag = true;
           console.log(id)
           // 根据ID查询出要编辑的数据
-          var book = this.books.filter(function(item){
+          var book = this.books.filter(function (item) {
             return item.id == id;
           });
           console.log(book)
@@ -148,4 +154,5 @@
     });
   </script>
 </body>
+
 </html>
